--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "rubix/ml": "^2.4",
         "spatie/laravel-sitemap": "^6.4"
     },
     "require-dev": {
