--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "rubix/ml": "^2.4",
-        "spatie/laravel-sitemap": "^6.4"
+        "spatie/laravel-sitemap": "^6.4",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
